아이템 추가
shw : 아이템 추가,
아이템의 ID로 데이터 테이블의 정보 세팅

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -147,7 +147,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="HandSwitching_Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="Rolling",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="GranadeThrowReady",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=G)
-+ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
