재장전 관련
shw : 재장전 관련 위젯 생성,
재장전시 남은탄 수, 현재 탄수 계산
탄 전부 소진시 자동 장전

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -149,6 +149,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="GranadeThrowReady",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=G)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="FireModeSelect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
++ActionMappings=(ActionName="Reload",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
